rs_src/bindings.rs

#[test]
fn bindgen_test_layout_rt_hw_spinlock_t___arch_tickets() {
    const UNINIT: ::core::mem::MaybeUninit<rt_hw_spinlock_t___arch_tickets> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_hw_spinlock_t___arch_tickets>(),
        4usize,
        concat!("Size of: ", stringify!(rt_hw_spinlock_t___arch_tickets))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_hw_spinlock_t___arch_tickets>(),
        2usize,
        concat!("Alignment of ", stringify!(rt_hw_spinlock_t___arch_tickets))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_hw_spinlock_t___arch_tickets),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_hw_spinlock_t___arch_tickets),
            "::",
            stringify!(next)
        )
    );
}
#[test]
fn bindgen_test_layout_rt_hw_spinlock_t() {
    const UNINIT: ::core::mem::MaybeUninit<rt_hw_spinlock_t> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_hw_spinlock_t>(),
        4usize,
        concat!("Size of: ", stringify!(rt_hw_spinlock_t))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_hw_spinlock_t>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_hw_spinlock_t))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).slock) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_hw_spinlock_t),
            "::",
            stringify!(slock)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tickets) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_hw_spinlock_t),
            "::",
            stringify!(tickets)
        )
    );
}
extern "C" {
    pub fn _thread_start();
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct rt_spinlock {
    pub lock: rt_hw_spinlock_t,
}
#[test]
fn bindgen_test_layout_rt_spinlock() {
    const UNINIT: ::core::mem::MaybeUninit<rt_spinlock> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_spinlock>(),
        4usize,
        concat!("Size of: ", stringify!(rt_spinlock))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_spinlock>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_spinlock))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).lock) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_spinlock),
            "::",
            stringify!(lock)
        )
    );
}
#[doc = "< The object is not used."]
pub const rt_object_class_type_RT_Object_Class_Null: rt_object_class_type = 0;
#[doc = "< The object is a thread."]
pub const rt_object_class_type_RT_Object_Class_Thread: rt_object_class_type = 1;
#[doc = "< The object is a semaphore."]
pub const rt_object_class_type_RT_Object_Class_Semaphore: rt_object_class_type = 2;
#[doc = "< The object is a mutex."]
pub const rt_object_class_type_RT_Object_Class_Mutex: rt_object_class_type = 3;
#[doc = "< The object is a event."]
pub const rt_object_class_type_RT_Object_Class_Event: rt_object_class_type = 4;
#[doc = "< The object is a mail box."]
pub const rt_object_class_type_RT_Object_Class_MailBox: rt_object_class_type = 5;
#[doc = "< The object is a message queue."]
pub const rt_object_class_type_RT_Object_Class_MessageQueue: rt_object_class_type = 6;
#[doc = "< The object is a memory heap."]
pub const rt_object_class_type_RT_Object_Class_MemHeap: rt_object_class_type = 7;
#[doc = "< The object is a memory pool."]
pub const rt_object_class_type_RT_Object_Class_MemPool: rt_object_class_type = 8;
#[doc = "< The object is a device."]
pub const rt_object_class_type_RT_Object_Class_Device: rt_object_class_type = 9;
#[doc = "< The object is a timer."]
pub const rt_object_class_type_RT_Object_Class_Timer: rt_object_class_type = 10;
#[doc = "< The object is a memory."]
pub const rt_object_class_type_RT_Object_Class_Memory: rt_object_class_type = 11;
#[doc = "< The object is a custom object"]
pub const rt_object_class_type_RT_Object_Class_Custom: rt_object_class_type = 12;
#[doc = "< The object is unknown."]
pub const rt_object_class_type_RT_Object_Class_Unknown: rt_object_class_type = 13;
#[doc = "< The object is a static object."]
pub const rt_object_class_type_RT_Object_Class_Static: rt_object_class_type = 128;
pub type rt_object_class_type = core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_object {
    #[doc = "< dynamic name of kernel object"]
    pub name: [core::ffi::c_char; 8usize],
    #[doc = "< type of kernel object"]
    pub type_: rt_uint8_t,
    #[doc = "< flag of kernel object"]
    pub flag: rt_uint8_t,
    #[doc = "< list node of kernel object"]
    pub list: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_object() {
    const UNINIT: ::core::mem::MaybeUninit<rt_object> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_object>(),
        20usize,
        concat!("Size of: ", stringify!(rt_object))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_object>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_object))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flag) as usize - ptr as usize },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(flag)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).list) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(list)
        )
    );
}
pub type rt_object_t = *mut rt_object;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct rt_object_information {
    pub spinlock: rt_spinlock,
    #[doc = "< object list"]
    pub object_list: rt_list_t,
    #[doc = "< object size"]
    pub object_size: rt_size_t,
    #[doc = "< object class type"]
    pub type_: rt_object_class_type,
}
#[test]
fn bindgen_test_layout_rt_object_information() {
    const UNINIT: ::core::mem::MaybeUninit<rt_object_information> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_object_information>(),
        20usize,
        concat!("Size of: ", stringify!(rt_object_information))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_object_information>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_object_information))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).spinlock) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object_information),
            "::",
            stringify!(spinlock)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).object_list) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object_information),
            "::",
            stringify!(object_list)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).object_size) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object_information),
            "::",
            stringify!(object_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object_information),
            "::",
            stringify!(type_)
        )
    );
}
#[doc = " timer structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_timer {
    #[doc = "< inherit from rt_object"]
    pub parent: rt_object,
    pub row: [rt_list_t; 1usize],
    #[doc = "< timeout function"]
    pub timeout_func:
        ::core::option::Option<unsafe extern "C" fn(parameter: *mut core::ffi::c_void)>,
    #[doc = "< timeout function's parameter"]
    pub parameter: *mut core::ffi::c_void,
    #[doc = "< timer timeout tick"]
    pub init_tick: rt_tick_t,
    #[doc = "< timeout tick"]
    pub timeout_tick: rt_tick_t,
}
#[test]
fn bindgen_test_layout_rt_timer() {
    const UNINIT: ::core::mem::MaybeUninit<rt_timer> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_timer>(),
        44usize,
        concat!("Size of: ", stringify!(rt_timer))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_timer>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_timer))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).row) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(row)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).timeout_func) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(timeout_func)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parameter) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(parameter)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).init_tick) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(init_tick)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).timeout_tick) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_timer),
            "::",
            stringify!(timeout_tick)
        )
    );
}
pub type rt_timer_t = *mut rt_timer;
pub const RT_INTERRUPTIBLE: _bindgen_ty_1 = 0;
pub const RT_KILLABLE: _bindgen_ty_1 = 1;
pub const RT_UNINTERRUPTIBLE: _bindgen_ty_1 = 2;
pub type _bindgen_ty_1 = core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_cpu {
    _unused: [u8; 0],
}
pub type rt_thread_cleanup_t = ::core::option::Option<unsafe extern "C" fn(tid: *mut rt_thread)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_stack {
    pub sp: rt_ubase_t,
    pub stack_addr: *mut rt_uint8_t,
    pub size: rt_size_t,
}
